# Lawyer

./: README.md  RUN_THIS_MIGRATION.sql  _config.yml  index.html  package.json  supabase_schema.sql  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  drive.rs  main.rs  models.rs  sync.rs
src-tauri/src/commands/: auth.rs  cases.rs  clients.rs  dashboard.rs  drive.rs  files.rs  mod.rs
src/components/Cases/: CaseCard.tsx  CaseDetail.tsx  CreateCaseModal.tsx
src/components/Clients/: ClientDetail.tsx  ClientList.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/Settings/: LoginScreen.tsx  SettingsPage.tsx  SetupScreen.tsx
src/components/Shared/: Layout.module.css  Layout.tsx  Modal.tsx  PageHeader.tsx  Toast.tsx
src/services/: tauri.ts
src/store/: index.ts
src/styles/: globals.css
src/types/: index.ts
